Remove sensors from AggregateSensor which are no longer part of our container

When an object is removed from a container itself and its properties are still
valid but not part of the container anymore.
BUG:436300